fix: adjusting the modal spacing for the 420 breakpoint

--- a/src/styles/sass/components/AuthModal/_authModal.scss
+++ b/src/styles/sass/components/AuthModal/_authModal.scss
@@ -129,3 +129,11 @@
     background: rgba(0, 0, 0, 0.5);
   }
 }
+
+@media (max-width: 420px) {
+  .overlay {
+    aside {
+      margin-left: 0.5px;
+    }
+  }
+}
